triangular -> tetrahedral in docs

--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -195,14 +195,14 @@ Tetrahedral harmonics are:
 & \quad \times \left(2-\frac{2y}{1-x}\right)^m \tilde{P}_m^{(2m+\gamma+\delta+1,\beta)}\left(\frac{2y}{1-x}-1\right)\\
 & \quad \times \tilde{P}_m^{(\delta,\gamma)}\left(\frac{2z}{1-x-y}-1\right),\nonumber
 \end{align}
-where the tilde implies that the univariate Jacobi polynomials are orthonormal. A degree-$n$ expansion in triangular harmonics is given by:
+where the tilde implies that the univariate Jacobi polynomials are orthonormal. A degree-$n$ expansion in tetrahedral harmonics is given by:
 \begin{equation}
 f_n(x,y,z) = \sum_{k=0}^n\sum_{\ell=0}^k\sum_{m=0}^{k-\ell} f_{k,\ell}^m \tilde{P}_{k,\ell,m}^{(\alpha,\beta,\gamma,\delta)}(x,y,z).
 \end{equation}
 \begin{equation}
 f_n(x,y,z) = \sum_{m=0}^n\sum_{\ell=0}^{n-m}\sum_{k=\ell+m}^n f_{k,\ell}^m \tilde{P}_{k,\ell,m}^{(\alpha,\beta,\gamma,\delta)}(x,y,z).
 \end{equation}
-If triangular harmonic expansion coefficients are organized into the rank-$3$ array whose $m^{\rm th}$ slice is:
+If tetrahedral harmonic expansion coefficients are organized into the rank-$3$ array whose $m^{\rm th}$ slice is:
 \begin{equation}
 F[0:n-m,0:n-m,m] = \begin{pmatrix}
 f_{m,0}^m & f_{1+m,1}^m & f_{2+m,2}^m & \cdots & f_{n,n-m}^m\\
