--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -17,6 +17,8 @@
 
 \author{Richard Mika\"el Slevinsky\thanks{Email: Richard.Slevinsky@umanitoba.ca}}
 
+\date{}
+
 \maketitle
 
 \section{Introduction}
