--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -194,16 +194,14 @@ Since {\tt disk2cxf} only transforms columns of the arrays, the routine is indif
 Tetrahedral harmonics are:
 \begin{align}
 \tilde{P}_{k,\ell,m}^{(\alpha,\beta,\gamma,\delta)}(x,y,z) & = (2-2x)^{\ell+m} \tilde{P}_{k-\ell-m}^{(2\ell+2m+\beta+\gamma+\delta+2,\alpha)}(2x-1)\nonumber\\
-& \quad \times \left(2-\frac{2y}{1-x}\right)^m \tilde{P}_m^{(2m+\gamma+\delta+1,\beta)}\left(\frac{2y}{1-x}-1\right)\\
+& \quad \times \left(2-\frac{2y}{1-x}\right)^m \tilde{P}_\ell^{(2m+\gamma+\delta+1,\beta)}\left(\frac{2y}{1-x}-1\right)\\
 & \quad \times \tilde{P}_m^{(\delta,\gamma)}\left(\frac{2z}{1-x-y}-1\right),\nonumber
 \end{align}
 where the tilde implies that the univariate Jacobi polynomials are orthonormal. A degree-$n$ expansion in tetrahedral harmonics is given by:
-\begin{equation}
-f_n(x,y,z) = \sum_{k=0}^n\sum_{\ell=0}^k\sum_{m=0}^{k-\ell} f_{k,\ell}^m \tilde{P}_{k,\ell,m}^{(\alpha,\beta,\gamma,\delta)}(x,y,z).
-\end{equation}
-\begin{equation}
-f_n(x,y,z) = \sum_{m=0}^n\sum_{\ell=0}^{n-m}\sum_{k=\ell+m}^n f_{k,\ell}^m \tilde{P}_{k,\ell,m}^{(\alpha,\beta,\gamma,\delta)}(x,y,z).
-\end{equation}
+\begin{align}
+f_n(x,y,z) & = \sum_{k=0}^n\sum_{\ell=0}^k\sum_{m=0}^{k-\ell} f_{k,\ell}^m \tilde{P}_{k,\ell,m}^{(\alpha,\beta,\gamma,\delta)}(x,y,z),\\
+& = \sum_{m=0}^n\sum_{\ell=0}^{n-m}\sum_{k=\ell+m}^n f_{k,\ell}^m \tilde{P}_{k,\ell,m}^{(\alpha,\beta,\gamma,\delta)}(x,y,z).
+\end{align}
 If tetrahedral harmonic expansion coefficients are organized into the rank-$3$ array whose $m^{\rm th}$ slice is:
 \begin{equation}
 F[0:n-m,0:n-m,m] = \begin{pmatrix}
